FIx the issue of white-bar at the bottom of the page
Used the background-image property instead of img element to set the
image that way setting the size in the div changes the size of the image
which helped me find the issue. Most probably it was caused by size
of the image not fitting properly, since the image was repeating in the
div so I had to zoom in the image a bit to stop the repeat and white-space

--- a/style.css
+++ b/style.css
@@ -4,14 +4,9 @@
     box-sizing: border-box;
 }
 
-html {
-    height: 100%;
-}
-
 html, body, fieldset, ul {
     margin: 0;
     padding: 0;
-    overscroll-behavior: none;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -44,17 +39,18 @@ span.italic {
     width: 52vw;
 }
 
-.background-image img {
-    min-height: 100%;
+.background-image {
+    min-height: 700px;
     width: 34vw;
     position: relative;
-    text-align: center;
+    background-image: url(./images/halie-west-25xggax4bSA-unsplash.jpg);
+    background-size: 110%;
 }
 
 .credits {
     position: absolute;
-    bottom: -80px;
-    left: 7%;
+    bottom: 0;
+    left: 100px;
     color: white;
 }
 
